--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -224,7 +224,7 @@ html {
     display: flex;
     flex-flow: column;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 20px 35px 20px;
     margin-right: 0px;
     margin-left: 0px;
     z-index: 0;
